--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Fri May 20 16:38:31 2005  Tim Janik  <timj@gtk.org>
+
+	* library/scripts/*.scm: added translation markup, fixed error messages.
+
+	* shell/bse-scm-glue.boot: define (N_) and (Q_) translation markup
+	functions. added (bse-exit-error) for convenience.
+
+	* beast-gtk/bstusermessage.c: fixed default config_check to actually 
+	take effect. handle empty messages strings. 
+
+	* beast-gtk/bstsnetrouter.c: auto fill sciprt parameter synth-net.
+
 Fri May 20 14:06:01 2005  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/Makefile.am: removed bstdebugkeys.defs and build rule.
