--- a/TODO
+++ b/TODO
@@ -1,13 +1,12 @@
+- change procedure dialog title to procedures catgeory name
 - get rid of usr-msg-type. change usr-msg to something like action-text or similar (primary + secondary might make sense)
 - test bse-script-set-status, bse-script-quit
-- rempve debugkey.lst
 - remove janitor::close
 - allow scripts to issue errors diagnosis etc. then check bse-script-exit
 - compare details from "loop range is empty" with details from "bse-script-progressor"
 - add/remove actions to/from shadow storage and require a script to issue actions-commit/gui-update or similar for the actions to really appear on-screen
 - sync log-domain with thrwead name in profiler
 - add BST_MSG_PROXY(project) for detail section
-- check primary/secondary text selection condition in bstusermessages.c with "" messages (maybe produced by scheme functions with default args)
 - start bsesh with nice level reduced by exactly 1 (must be configurable, default:on)
 - popup prominent error message upon startup scripts could not be found, same if plugins could not be found
 - add enum BseMessageCode to bsecore.idl (enum and BseMessage field) to identify messages via BSE_MSG_CODE(nnn) that may be usefull to handle
