--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-22  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 Sat May 21 02:45:50 2005  Tim Janik  <timj@gtk.org>
 
 	* po/update.sh: call ../intltool-update, so we're really updating
