--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,19 @@
 Overview of Changes in BEAST/BSE 0.6.6:
 
+* Improved error messages
+* Improved script handling
+* Implemented translation of scheme script strings
+* Fixed closing of unsaved projects
+* Fixed project Save vs. Save As behaviour
+* Fixed localized numbers being written to .bse files
+* Fixed sample embedding in .bse files (0.6.5 did not store all samples)
+* Rewrote message dialogs and message mechanisms
 * Fixed stale header files, left out by make uninstall
+* Updated Canadian English translation [Adam Weinberger] 
+* Updated Czech translation [Miloslav Trmac]
+* Updated Italian translation [Petrecca Michele]
+* Updated Spanish translation [Francisco Javier F. Serrador]
+* Added Basque translation [Hizkuntza Politikarako Sailburuordetza]
 
 Overview of Changes in BEAST/BSE 0.6.5:
 
